--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@monaco-editor/react": "^4.4.6",
     "@nextui-org/react": "^1.0.0-beta.10",
     "next": "12.3.1",
     "react": "18.2.0",
