--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "@nextui-org/react": "^1.0.0-beta.10",
     "next": "12.3.1",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "recoil": "^0.7.5"
   },
   "devDependencies": {
     "@types/node": "18.8.2",
