--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "next": "12.3.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "reactflow": "^11.1.1",
     "recoil": "^0.7.5"
   },
   "devDependencies": {
