--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "reactflow": "^11.3.3",
-    "recoil": "^0.7.6"
+    "recoil": "^0.7.6",
+    "timeago.js": "^4.0.2"
   },
   "devDependencies": {
     "@types/node": "18.11.12",
