--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.4.6",
+    "@next/font": "^13.1.1",
     "@nextui-org/react": "^1.0.0-beta.11",
     "date-fns": "^2.29.3",
     "next": "13.0.6",
