--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next/font": "^13.1.1",
     "@nextui-org/react": "^1.0.0-beta.11",
     "date-fns": "^2.29.3",
+    "nanoid": "^4.0.0",
     "next": "13.0.6",
     "next-themes": "^0.2.1",
     "pretty-bytes": "^6.0.0",
