--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@next/font": "^13.1.1",
     "@nextui-org/react": "^1.0.0-beta.11",
     "date-fns": "^2.29.3",
+    "leaflet": "^1.9.3",
     "nanoid": "^4.0.0",
     "next": "13.0.6",
     "next-themes": "^0.2.1",
@@ -24,6 +25,7 @@
     "timeago.js": "^4.0.2"
   },
   "devDependencies": {
+    "@types/leaflet": "^1.9.0",
     "@types/node": "18.11.12",
     "@types/react": "18.0.26",
     "@types/react-dom": "18.0.9",
