--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "13.0.6",
     "next-themes": "^0.2.1",
     "pretty-bytes": "^6.0.0",
+    "re-resizable": "^6.9.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "reactflow": "^11.3.3",
