--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "date-fns": "^2.29.3",
     "leaflet": "^1.9.3",
     "nanoid": "^4.0.0",
-    "next": "13.0.6",
+    "next": "^13.1.1",
     "next-themes": "^0.2.1",
     "pretty-bytes": "^6.0.0",
     "re-resizable": "^6.9.9",
@@ -27,11 +27,11 @@
   },
   "devDependencies": {
     "@types/leaflet": "^1.9.0",
-    "@types/node": "18.11.12",
+    "@types/node": "^18.11.18",
     "@types/react": "18.0.26",
-    "@types/react-dom": "18.0.9",
-    "eslint": "8.29.0",
-    "eslint-config-next": "13.0.6",
+    "@types/react-dom": "^18.0.10",
+    "eslint": "^8.31.0",
+    "eslint-config-next": "^13.1.1",
     "prettier": "^2.8.1",
     "typescript": "4.9.4"
   }
