--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@monaco-editor/react": "^4.4.6",
     "@next/font": "^13.1.1",
     "@nextui-org/react": "^1.0.0-beta.11",
+    "@vercel/analytics": "^0.1.8",
     "dagre": "^0.8.5",
     "date-fns": "^2.29.3",
     "leaflet": "^1.9.3",
