--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@vercel/analytics": "^0.1.8",
     "dagre": "^0.8.5",
     "date-fns": "^2.29.3",
+    "html-to-image": "^1.11.11",
     "leaflet": "^1.9.3",
     "nanoid": "^4.0.0",
     "next": "^13.1.1",
