--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "re-resizable": "^6.9.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-query": "^3.39.3",
     "reactflow": "^11.3.3",
     "recoil": "^0.7.6",
     "timeago.js": "^4.0.2"
