--- a/package.json
+++ b/package.json
@@ -39,6 +39,6 @@
     "eslint": "^8.31.0",
     "eslint-config-next": "^13.1.1",
     "prettier": "^2.8.1",
-    "typescript": "4.9.4"
+    "typescript": "^5.1.3"
   }
 }
