--- a/package.json
+++ b/package.json
@@ -30,11 +30,11 @@
     "zustand": "^4.4.3"
   },
   "devDependencies": {
-    "@types/dagre": "^0.7.48",
-    "@types/leaflet": "^1.9.3",
-    "@types/node": "^18.11.18",
-    "@types/react": "18.0.26",
-    "@types/react-dom": "^18.0.10",
+    "@types/dagre": "^0.7.51",
+    "@types/leaflet": "^1.9.7",
+    "@types/node": "^20.8.7",
+    "@types/react": "^18.2.31",
+    "@types/react-dom": "^18.2.14",
     "eslint": "^8.31.0",
     "eslint-config-next": "^13.5.6",
     "prettier": "^2.8.1",
