--- a/package.json
+++ b/package.json
@@ -10,12 +10,13 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
-    "@nextui-org/react": "^1.0.0-beta.13",
+    "@nextui-org/react": "^2.1.13",
     "@tanstack/react-query": "^5.0.0",
     "@tanstack/react-query-devtools": "^4.27.0",
     "@vercel/analytics": "^1.1.1",
     "dagre": "^0.8.5",
     "date-fns": "^2.30.0",
+    "framer-motion": "^10.16.4",
     "html-to-image": "^1.11.11",
     "leaflet": "^1.9.4",
     "nanoid": "^5.0.2",
