--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint": "^8.52.0",
     "eslint-config-next": "^13.5.6",
     "prettier": "^3.0.3",
+    "prettier-plugin-tailwindcss": "^0.5.6",
     "typescript": "^5.2.2"
   }
 }
