--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
     "@nextui-org/react": "^2.1.13",
+    "@nextui-org/theme": "^2.1.9",
     "@tanstack/react-query": "^5.0.0",
     "@tanstack/react-query-devtools": "^4.27.0",
     "@vercel/analytics": "^1.1.1",
