--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
   },
   "dependencies": {
     "@monaco-editor/react": "^4.6.0",
+    "@nextui-org/button": "^2.0.21",
     "@nextui-org/react": "^2.1.13",
+    "@nextui-org/system": "^2.0.10",
     "@nextui-org/theme": "^2.1.9",
     "@tanstack/react-query": "^5.0.0",
-    "@tanstack/react-query-devtools": "^4.27.0",
     "@vercel/analytics": "^1.1.1",
     "dagre": "^0.8.5",
     "date-fns": "^2.30.0",
@@ -37,10 +38,13 @@
     "@types/node": "^20.8.7",
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
+    "autoprefixer": "^10.4.16",
     "eslint": "^8.52.0",
     "eslint-config-next": "^13.5.6",
+    "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
+    "tailwindcss": "^3.3.5",
     "typescript": "^5.2.2"
   }
 }
