--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nextui-org/react": "^2.1.13",
     "@nextui-org/system": "^2.0.10",
     "@nextui-org/theme": "^2.1.9",
+    "@nextui-org/tooltip": "^2.0.24",
     "@tanstack/react-query": "^5.0.0",
     "@vercel/analytics": "^1.1.1",
     "dagre": "^0.8.5",
