--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nextui-org/chip": "^2.0.21",
     "@nextui-org/navbar": "^2.0.22",
     "@nextui-org/react": "^2.1.13",
+    "@nextui-org/switch": "^2.0.21",
     "@nextui-org/system": "^2.0.10",
     "@nextui-org/theme": "^2.1.9",
     "@nextui-org/tooltip": "^2.0.24",
