chore: install `@nextui-org/modal` dependency and configure it

--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nextui-org/button": "^2.0.21",
     "@nextui-org/card": "^2.0.21",
     "@nextui-org/chip": "^2.0.21",
+    "@nextui-org/modal": "^2.0.23",
     "@nextui-org/navbar": "^2.0.22",
     "@nextui-org/react": "^2.1.13",
     "@nextui-org/switch": "^2.0.21",
