--- a/package.json
+++ b/package.json
@@ -13,13 +13,16 @@
     "@nextui-org/button": "^2.0.21",
     "@nextui-org/card": "^2.0.21",
     "@nextui-org/chip": "^2.0.21",
+    "@nextui-org/image": "^2.0.21",
     "@nextui-org/input": "^2.1.9",
+    "@nextui-org/link": "^2.0.22",
     "@nextui-org/modal": "^2.0.23",
     "@nextui-org/navbar": "^2.0.22",
     "@nextui-org/progress": "^2.0.21",
     "@nextui-org/react": "^2.1.13",
     "@nextui-org/switch": "^2.0.21",
     "@nextui-org/system": "^2.0.10",
+    "@nextui-org/table": "^2.0.23",
     "@nextui-org/theme": "^2.1.9",
     "@nextui-org/tooltip": "^2.0.24",
     "@tanstack/react-query": "^5.0.0",
