--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "json-sea",
   "version": "1.10.2",
   "private": true,
+  "engines": {
+    "node": ">=22.20.0"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
