chore: migrate nextui to heroui

--- a/package.json
+++ b/package.json
@@ -12,22 +12,22 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/button": "2.2.26",
+    "@heroui/card": "2.2.24",
+    "@heroui/chip": "2.2.21",
+    "@heroui/image": "2.2.16",
+    "@heroui/input": "2.4.27",
+    "@heroui/link": "2.2.22",
+    "@heroui/modal": "2.2.23",
+    "@heroui/navbar": "2.2.24",
+    "@heroui/progress": "2.2.21",
+    "@heroui/react": "2.8.4",
+    "@heroui/switch": "2.2.23",
+    "@heroui/system": "2.4.22",
+    "@heroui/table": "2.2.26",
+    "@heroui/theme": "2.4.22",
+    "@heroui/tooltip": "2.2.23",
     "@monaco-editor/react": "^4.6.0",
-    "@nextui-org/button": "^2.0.22",
-    "@nextui-org/card": "^2.0.22",
-    "@nextui-org/chip": "^2.0.22",
-    "@nextui-org/image": "^2.0.22",
-    "@nextui-org/input": "^2.1.11",
-    "@nextui-org/link": "^2.0.23",
-    "@nextui-org/modal": "^2.0.24",
-    "@nextui-org/navbar": "^2.0.23",
-    "@nextui-org/progress": "^2.0.22",
-    "@nextui-org/react": "^2.2.2",
-    "@nextui-org/switch": "^2.0.22",
-    "@nextui-org/system": "^2.0.11",
-    "@nextui-org/table": "^2.0.24",
-    "@nextui-org/theme": "^2.1.12",
-    "@nextui-org/tooltip": "^2.0.25",
     "@tanstack/react-query": "^5.0.0",
     "@vercel/analytics": "^1.1.1",
     "dagre": "^0.8.5",
@@ -49,12 +49,12 @@
   "devDependencies": {
     "@types/dagre": "^0.7.51",
     "@types/leaflet": "^1.9.7",
-    "@types/node": "^20.8.7",
+    "@types/node": "^24.5.2",
     "@types/react": "^18.2.31",
     "@types/react-dom": "^18.2.14",
     "autoprefixer": "^10.4.16",
-    "eslint": "^8.52.0",
-    "eslint-config-next": "^13.5.6",
+    "eslint": "^9.0.0",
+    "eslint-config-next": "^15.0.0",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.9",
