--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "node": ">=22.20.0"
   },
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbopack",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -36,12 +36,12 @@
     "html-to-image": "^1.11.11",
     "leaflet": "^1.9.4",
     "nanoid": "^5.0.2",
-    "next": "^13.5.6",
+    "next": "15.5.4",
     "next-themes": "^0.2.1",
     "pretty-bytes": "^7.1.0",
     "re-resizable": "^6.9.11",
-    "react": "^19.1.1",
-    "react-dom": "^19.1.1",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "reactflow": "^11.10.1",
     "timeago.js": "^4.0.2",
     "zustand": "^4.4.7"
@@ -50,15 +50,21 @@
     "@types/dagre": "^0.7.51",
     "@types/leaflet": "^1.9.7",
     "@types/node": "^24.5.2",
-    "@types/react": "^19.1.14",
-    "@types/react-dom": "^19.1.9",
+    "@types/react": "19.1.14",
+    "@types/react-dom": "19.1.9",
     "autoprefixer": "^10.4.16",
     "eslint": "^9.0.0",
-    "eslint-config-next": "^15.0.0",
+    "eslint-config-next": "15.5.4",
     "postcss": "^8.4.31",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.9",
     "tailwindcss": "^3.4.0",
     "typescript": "^5.2.2"
+  },
+  "pnpm": {
+    "overrides": {
+      "@types/react": "19.1.14",
+      "@types/react-dom": "19.1.9"
+    }
   }
 }
