chore: add `packageManager` field to package.json (pnpm@10.17.1)

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "json-sea",
   "version": "1.10.2",
   "private": true,
+  "packageManager": "pnpm@10.17.1",
   "engines": {
     "node": ">=22.20.0"
   },
