--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@heroui/breadcrumbs": "^2.2.22",
     "@heroui/button": "2.2.26",
     "@heroui/card": "2.2.24",
     "@heroui/chip": "2.2.21",
